<resources>
    <string name="app_name">Calendar and Tasks</string>
    <string name="item_text_sample">Item text sample</string>
    <string name="today">Today</string>
    <string name="inbox">Inbox</string>
    <string name="type_birthday">Birthday</string>
    <string name="type_holiday">Holiday</string>
    <string name="calendar_type_format">Calendar(%1$s)</string>
    <string name="type_default">Event</string>

    <string name="create_task_event_notify_custom">Custom</string>
    <string name="create_task_event_notify_does_not_repeat">Does not repeat</string>
    <string name="create_task_event_notify_week">Every week</string>
    <string name="create_task_event_notify_month">Every month</string>
    <string name="create_task_event_notify_year">Every year</string>
    <string name="create_task_event_notify_day">Every day</string>

    <string name="create_birthday_notify_day_before_17">The day before at 17:00</string>
    <string name="create_birthday_notify_day_before_9">The day before at 9:00</string>
    <string name="create_birthday_notify_custom">Custom</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="setting">Setting</string>
    <string name="calendar">Calendar</string>
    <string name="open_source">Open source</string>
    <string name="github">Github</string>
    <string name="feedback">Feedback</string>
    <string name="rate_in_play_store">Rate in Play Store</string>
    <string name="legal_information">Legal information</string>
    <string name="bug_report">Report a bug</string>
    <string name="license">License</string>
    <string name="logout">Logout</string>
    <string name="theme">Theme</string>
    <string name="system">System</string>
    <string name="start_screen">Start screen</string>
    <string name="list">List</string>
    <string name="chevron">Chevron</string>
    <string name="account">Account</string>
    <string name="user">User</string>
    <string name="email">Email</string>
    <string name="first_day_of_week">First day of week</string>
    <string name="monday">Monday</string>
    <string name="about">About</string>
    <string name="about_app">About app</string>
    <string name="split">Split</string>
    <string name="task">Task</string>
    <string name="event">Event</string>
    <string name="birthday">Birthday</string>
    <string name="version_of_app">Version: 1.0</string>
    <string name="general">General</string>
    <string name="create_event_description_hint">Add description</string>
    <string name="color_tag">Color tag</string>
    <string name="save">Save</string>
    <string name="add_deadline">Add deadline</string>
    <string name="add_description">Add description</string>
    <string name="my_tasks">My tasks</string>
    <string name="jan_27">Jan 27</string>
    <string name="all_day">All-day</string>
    <string name="subtasks">Subtasks</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
</resources>