<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/aboutTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/aboutToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorSurface"
            app:layout_anchor="@+id/aboutTopBar"
            app:layout_anchorGravity="center"
            app:navigationIcon="@drawable/back"
            app:navigationIconTint="?attr/colorOnSurfaceVariant"
            app:title="About"
            app:titleTextColor="?attr/colorOnSurface"
            app:titleTextAppearance="@style/TextAppearance.Material3.TitleLarge" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingVertical="24dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/aboutAppIcon"
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    app:srcCompat="@mipmap/ic_launcher"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textSize="22sp"
                    android:text="@string/calendar"
                    android:textColor="?attr/colorOnBackground"
                    android:fontFamily="@font/inter_bold"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/aboutVersionTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/inter_regular"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    android:text="@string/version_of_app" />
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/OutlinedCardViewTitle"
                android:text="@string/open_source" />

            <com.google.android.material.card.MaterialCardView style="@style/OutlinedCardViewCardView">

                <RelativeLayout
                    android:id="@+id/aboutGithubButton"
                    style="@style/OutlinedCardViewRelativeLayout">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/aboutGithubIcon"
                        style="@style/AboutImageView"
                        android:contentDescription="@string/github"
                        app:srcCompat="@drawable/github" />

                    <TextView
                        style="@style/OutlinedCardViewTextView"
                        android:layout_toEndOf="@id/aboutGithubIcon"
                        android:text="@string/github" />

                    <androidx.appcompat.widget.AppCompatImageView
                        style="@style/AboutImageView"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/chevron"
                        app:srcCompat="@drawable/chevron_right" />
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                style="@style/OutlinedCardViewTitle"
                android:text="@string/feedback" />

            <com.google.android.material.card.MaterialCardView style="@style/OutlinedCardViewCardView">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/aboutRateButton"
                        style="@style/OutlinedCardViewRelativeLayout">


                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/aboutRateIcon"
                            style="@style/AboutImageView"
                            android:contentDescription="@string/rate_in_play_store"
                            app:srcCompat="@drawable/star" />

                        <TextView
                            style="@style/OutlinedCardViewTextView"
                            android:layout_toEndOf="@id/aboutRateIcon"
                            android:text="@string/rate_in_play_store" />

                        <androidx.appcompat.widget.AppCompatImageView
                            style="@style/AboutImageView"
                            android:layout_alignParentEnd="true"
                            android:contentDescription="@string/chevron"
                            app:srcCompat="@drawable/chevron_right" />
                    </RelativeLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        app:dividerColor="?attr/colorOutline" />

                    <RelativeLayout
                        android:id="@+id/aboutReportButton"
                        style="@style/OutlinedCardViewRelativeLayout">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/aboutReportIcon"
                            style="@style/AboutImageView"
                            android:contentDescription="@string/bug_report"
                            app:srcCompat="@drawable/bug_report" />

                        <TextView
                            style="@style/OutlinedCardViewTextView"
                            android:layout_toEndOf="@id/aboutReportIcon"
                            android:text="@string/bug_report" />

                        <androidx.appcompat.widget.AppCompatImageView
                            style="@style/AboutImageView"
                            android:contentDescription="@string/chevron"
                            android:layout_alignParentEnd="true"
                            app:srcCompat="@drawable/chevron_right" />
                    </RelativeLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                style="@style/OutlinedCardViewTitle"
                android:text="@string/legal_information" />

            <com.google.android.material.card.MaterialCardView style="@style/OutlinedCardViewCardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <RelativeLayout
                        android:id="@+id/aboutPolicyButton"
                        style="@style/OutlinedCardViewRelativeLayout">


                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/aboutPrivacyIcon"
                            style="@style/AboutImageView"
                            android:contentDescription="@string/privacy_policy"
                            app:srcCompat="@drawable/privacy_policy" />

                        <TextView
                            android:layout_toEndOf="@id/aboutPrivacyIcon"
                            android:text="@string/privacy_policy"
                            style="@style/OutlinedCardViewTextView" />

                        <androidx.appcompat.widget.AppCompatImageView
                            style="@style/AboutImageView"
                            android:layout_alignParentEnd="true"
                            android:contentDescription="@string/chevron"
                            app:srcCompat="@drawable/chevron_right" />
                    </RelativeLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        app:dividerColor="?attr/colorOutline" />

                    <RelativeLayout
                        android:id="@+id/aboutLicenseButton"
                        style="@style/OutlinedCardViewRelativeLayout">


                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/aboutLicenseIcon"
                            android:contentDescription="@string/license"
                            app:srcCompat="@drawable/license"
                            style="@style/AboutImageView" />

                        <TextView
                            style="@style/OutlinedCardViewTextView"
                            android:layout_toEndOf="@id/aboutLicenseIcon"
                            android:text="@string/license" />

                        <androidx.appcompat.widget.AppCompatImageView
                            style="@style/AboutImageView"
                            android:layout_alignParentEnd="true"
                            android:contentDescription="@string/chevron"
                            app:srcCompat="@drawable/chevron_right" />
                    </RelativeLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>