<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="40dp">

    <ImageButton
        android:id="@+id/create_back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnBackground" />

    <Button
        android:id="@+id/create_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/create_text_icon"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginTop="70dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toStartOf="@+id/create_edit_text"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/create_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="70dp"
        android:backgroundTint="?attr/colorSurface"
        android:textColorHint="?attr/colorOnSurfaceVariant"
        android:textColor="?attr/colorOnSurface"
        android:textSize="30sp"
        app:counterEnabled="true"
        app:counterMaxLength="1024"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/create_event_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/event"
        app:layout_constraintEnd_toStartOf="@+id/create_task_button"
        app:layout_constraintTop_toBottomOf="@+id/create_edit_text" />


    <Button
        android:id="@+id/create_task_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_edit_text" />

    <Button
        android:id="@+id/create_birthday_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/birthday"
        app:layout_constraintStart_toEndOf="@+id/create_task_button"
        app:layout_constraintTop_toBottomOf="@+id/create_edit_text" />

    <View
        android:id="@+id/view"
        style="@style/Divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_task_button" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/create_fcv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>
