<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:id="@+id/list_item">

    <FrameLayout
        android:id="@+id/checkboxFL"
        android:layout_width="54dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </FrameLayout>

    <TextView
        android:id="@+id/itemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="15sp"
        android:text="@string/item_text_sample"
        app:layout_constraintStart_toEndOf="@+id/checkboxFL"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/today"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/checkboxFL"
        app:layout_constraintTop_toBottomOf="@+id/itemText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_sortFL"
        android:layout_width="170dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/item_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/inbox"
            android:textSize="15sp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/item_sortIcon" />

        <ImageView
            android:id="@+id/item_sortIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>