<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/mainPagerTopBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="?attr/colorSurface"

            app:liftOnScroll="true"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/mainPagerSettingsBtn"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"

                app:layout_anchor="@+id/settingsTopBar"
                app:layout_anchorGravity="center"

                app:navigationIcon="@drawable/more_vert"
                app:navigationIconTint="?attr/colorOnSurfaceVariant"

                app:titleTextAppearance="@style/TextAppearance.Material3.TitleLarge">

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/mainToggleGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnView"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/list"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="16sp"
                        android:fontFamily="@font/inter_medium"
                        app:cornerRadius="10dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnCompose"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/split"
                        android:textColor="?attr/colorOnSurface"
                        app:cornerRadius="10dp" />
                </com.google.android.material.button.MaterialButtonToggleGroup>

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.material.divider.MaterialDivider style="@style/Divider" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/mainViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <View
        android:id="@+id/scrim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/create_menu_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="70dp"
        android:minWidth="70dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="25dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/task"
            android:textSize="20sp"
            android:visibility="gone"
            app:icon="@drawable/task"
            app:iconSize="40dp"
            app:layout_constraintBottom_toTopOf="@+id/create_event"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/event"
            android:textSize="20sp"
            android:visibility="gone"
            app:icon="@drawable/event"
            app:iconSize="40dp"
            app:layout_constraintBottom_toTopOf="@+id/create_birthday"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/birthday"
            android:textSize="20sp"
            android:visibility="gone"
            app:icon="@drawable/birthday"
            app:iconSize="40dp"
            app:layout_constraintBottom_toTopOf="@+id/create_item_button"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/create_item_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:outlineProvider="none"
            app:icon="@drawable/add"
            android:layout_marginTop="12dp"
            android:layout_margin="8dp"
            app:iconSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>